syntax = "proto3";

package console.v1;

option go_package = "github.com/xela07ax/spaceai-infra-prototype/pkg/api/connector/v1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

service ConsoleService {
  rpc CreatePolicy(CreatePolicyRequest) returns (Policy);
  rpc GetPendingApprovals(google.protobuf.Empty) returns (ApprovalList);
  rpc DecideApproval(DecideRequest) returns (google.protobuf.Empty);
  rpc GetAgentAnalytics(AnalyticsRequest) returns (AnalyticsResponse);
}

message CreatePolicyRequest {
  string agent_id = 1;
  string capability_id = 2;
  google.protobuf.Struct conditions = 3;
}

message Policy {
  string id = 1;
  string agent_id = 2;
  string capability_id = 3;
  google.protobuf.Timestamp created_at = 4;
}

message ApprovalList {
  repeated ApprovalRequest requests = 1;
}

message ApprovalRequest {
  string id = 1;
  string execution_id = 2;
  string agent_id = 3;
  string payload = 4;
}

message DecideRequest {
  string id = 1;
  bool approved = 2;
  string reason = 3;
}

message AnalyticsRequest {
  string agent_id = 1;
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
}

message AnalyticsResponse {
  int64 total_actions = 1;
  int64 blocked_actions = 2;
  map<string, int64> top_capabilities = 3;
}
